--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <header class="header">
+        <h2 class="header-text">portfolio</h2>
+        <button class="btn nav-btn" id="nav-btn"><i class="fa-solid fa-bars"></i></button>
+    </header>
     <div class="content" id="content">
         <main class="main" id="main"></main>
         <nav class="nav-bar" id="nav-bar">
             <ul class="nav-links" id="nav-links">
-                <li class="nav-link"><a href="#">home</a></li>
+                <li class="nav-link nav-selected"><a href="https://wikipedia.com">home</a></li>
                 <li class="nav-link"><a href="#">about</a></li>
                 <li class="nav-link"><a href="#">projects</a></li>
                 <li class="nav-link"><a href="#">contact</a></li>
             </ul>
+            <aside class="side-bar" id="side-bar">
+                <ul class="side-links" id="side-links">
+                    <li class="side-link"><a href="https://wikipedia.com">home</a></li>
+                    <li class="side-link"><a href="#">about</a></li>
+                    <li class="side-link"><a href="#">projects</a></li>
+                    <li class="side-link"><a href="#">contact</a></li>
+                </ul>
+            </aside>
         </nav>
     </div>
+    <script src="./javascript/app.js"></script>
 </body>
 </html>
