Create side bar close btn

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="nav-link"><a href="#">contact</a></li>
             </ul>
             <aside class="side-bar" id="side-bar">
+                <button class="btn close-btn" id="close-btn"><i class="fa-solid fa-xmark"></i></button>
                 <ul class="side-links" id="side-links">
                     <li class="side-link"><a href="https://wikipedia.com">home</a></li>
                     <li class="side-link"><a href="#">about</a></li>
