Create home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,35 @@
         </aside>
     </header>
     <div class="content" id="content">
-        <main class="main" id="main"></main>
+        <main class="main" id="main">
+            <section class="section home">
+                <div class="section-center home-center">
+                    <article class="home-info">
+                        <div class="section-title">
+                            <h2>hello! i'm jinan</h2>
+                            <p>web developer, game developer and electrical engineer</p>
+                            <ul class="social-links">
+                                <li class="social-link"><a href="">
+                                    <i class="fa-brands fa-github"></i>
+                                    <span>github</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a></li>
+                                <li class="social-link"><a href="">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                    <span>linkedin</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a></li>
+                                <li class="social-link"><a href="">
+                                    <i class="fa-brands fa-facebook"></i>
+                                    <span>facebook</span>
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </a></li>
+                            </ul>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
         <nav class="nav-bar" id="nav-bar">
             <ul class="nav-links" id="nav-links">
                 <li class="nav-link nav-selected"><a href="https://wikipedia.com">home</a></li>
