Change home title color

--- a/index.html
+++ b/index.html
@@ -27,25 +27,26 @@
                     <article class="home-info">
                         <div class="section-title">
                             <h2>hello! i'm jinan</h2>
-                            <p>web developer, game developer and electrical engineer</p>
-                            <ul class="social-links">
-                                <li class="social-link"><a href="">
-                                    <i class="fa-brands fa-github"></i>
-                                    <span>github</span>
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a></li>
-                                <li class="social-link"><a href="">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                    <span>linkedin</span>
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a></li>
-                                <li class="social-link"><a href="">
-                                    <i class="fa-brands fa-facebook"></i>
-                                    <span>facebook</span>
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a></li>
-                            </ul>
+                            <h4>web developer, game developer and electrical engineer</h4>
                         </div>
+                        <ul class="social-links">
+                            <li class="social-link"><a href="">
+                                <i class="fa-brands fa-github"></i>
+                                <span>github</span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a></li>
+                            <li class="social-link"><a href="">
+                                <i class="fa-brands fa-linkedin"></i>
+                                <span>linkedin</span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a></li>
+                            <li class="social-link"><a href="">
+                                <i class="fa-brands fa-facebook"></i>
+                                <span>facebook</span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a></li>
+                        </ul>
+                        
                     </article>
                 </div>
             </section>
