--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
             </section>
             <section class="section about-section">
-                <div class="section-title"><h4>about me</h4></div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, suscipit. Doloribus inventore reiciendis itaque culpa exercitationem tempora, id iste. Natus officiis porro nemo officia, eius vel dicta laudantium nulla, numquam nostrum aliquam amet commodi consequatur fugit suscipit nisi culpa nihil, cumque voluptatem quia aliquid ut doloremque unde non. Molestias, ratione.</p>
+                <div class="section-center"><div class="section-title"><h4>about me</h4></div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, suscipit. Doloribus inventore reiciendis itaque culpa exercitationem tempora, id iste. Natus officiis porro nemo officia, eius vel dicta laudantium nulla, numquam nostrum aliquam amet commodi consequatur fugit suscipit nisi culpa nihil, cumque voluptatem quia aliquid ut doloremque unde non. Molestias, ratione.</p></div>
             </section>
             <section class="section projects-section">
 
